# brain-scan-ai

./: .gitignore  main.ipynb  pyproject.toml
.ipynb_checkpoints/: main-checkpoint.ipynb
